--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,6 +32,11 @@
   </div>
 
   <div>
+    <%= form.label :password, style: "display: block" %>
+    <%= form.number_field :password %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
