added devise to application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,15 @@
 
   <body>
     <header>
-      
+
+      <button><%= link_to "sign in", new_user_session_path %></button>
+      <%= button_to "sign out", destroy_user_session_path, method: :delete %>
+      <button><%= link_to "sign up", new_user_registration_path %></button>
+
     </header>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <%= yield %>
   </body>
